--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "magic-string": "^0.30.10",
     "prettier": "^3.2.5",
     "yaml": "^2.4.1",
-    "zod": "^3.25.0"
+    "zod": "^3.25.0",
+    "zod-to-json-schema": "^3.25.0"
   }
 }
