--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   ],
   "scripts": {
     "build:schema": "node ./scripts/build-schema.js",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
     "lint": "prettier --check \"**/*.{js,json,md,yaml,yml}\"",
     "format": "prettier --write \"**/*.{js,json,md,yaml,yml}\"",
     "test": "node --test"
@@ -42,5 +45,8 @@
     "yaml": "^2.4.1",
     "zod": "^3.25.0",
     "zod-to-json-schema": "^3.25.0"
+  },
+  "devDependencies": {
+    "vitepress": "^1.6.3"
   }
 }
